# hw6py2

./: pyproject.toml
templates/: menu.html
