[tool.poetry]
name = "hw6py2"
version = "0.1.0"
description = ""
authors = ["Andrew2797 <andrijgolub27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
